--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -20,6 +20,7 @@
     <div id="app"></div>
     <script>
       window.options = {
+        base: '/react-styleguide-generator/styleguide',
         hashbang: true
       };
     </script>
