--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <link rel="stylesheet" href="src/sg.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="user.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   </head>
   <body>
     <div id="app"></div>
     <script>
       window.options = {
-        base: '/react-styleguide-generator/styleguide',
+        base: '/Users/pocotan001/Development/react-styleguide-generator/example/styleguide',
         hashbang: true
       };
     </script>
