--- a/index.html
+++ b/index.html
@@ -6,26 +6,25 @@
 
     <title>React Style Guide</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="apple-mobile-web-app-title" content="My App Name">
+    <meta name="viewport" content="width=device-width">
+    <meta name="apple-mobile-web-app-title" content="React Style Guide">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="src/sg.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="user.css">
+    <link rel="stylesheet" href="src/_sg.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   </head>
   <body>
     <div id="app"></div>
     <script>
       window.options = {
-        base: '/Users/pocotan001/Development/react-styleguide-generator/example/styleguide',
+        base: '/react-styleguide-generator',
         hashbang: true
       };
     </script>
-    <script src="src/contents-bundle.js"></script>
-    <script src="src/sg.js"></script>
+    <script src="src&#x2F;_react_0.13.3.js"></script>
+    <script src="src/_contents.js"></script>
+    <script src="src/_sg.js"></script>
   </body>
 </html>
