--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="app"></div>
     <script>
       window.options = {
-        base: '',
+        base: '/react-styleguide-generator',
         hashbang: true
       };
     </script>
