--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="format-detection" content="telephone=no">
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="src/_sg.css">
+    <link rel="stylesheet" href="src/sg.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   </head>
   <body>
@@ -23,8 +23,8 @@
         hashbang: true
       };
     </script>
-    <script src="src&#x2F;_react_0.13.3.js"></script>
-    <script src="src/_contents.js"></script>
-    <script src="src/_sg.js"></script>
+    <script src="src/react_0.13.3.js"></script>
+    <script src="src/contents.js"></script>
+    <script src="src/sg.js"></script>
   </body>
 </html>
