--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
     <meta name="format-detection" content="telephone=no">
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="src/sg.css">
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="src/app.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   </head>
   <body>
     <div id="app"></div>
+
     <script>
-      window.options = {
+      window.config = {
         base: '/react-styleguide-generator',
         hashbang: true
       };
     </script>
+    
     <script src="src/react_0.13.3.js"></script>
     <script src="src/contents.js"></script>
-    <script src="src/sg.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
