--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="src/app.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+      <link rel="stylesheet" href="files/example.css">
   </head>
   <body>
     <div id="app"></div>
@@ -22,9 +23,8 @@
       window.config = {
         base: '/react-styleguide-generator',
         hashbang: true
-      };
+      }
     </script>
-    
     <script src="src/react_0.13.3.js"></script>
     <script src="src/contents.js"></script>
     <script src="src/app.js"></script>
