--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <script>
       window.config = {
-        base: '',
+        base: '/react-styleguide-generator',
         hashbang: true
       }
 
