--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       }
 
       window.RSG = {
-          propMetas: {"DocCommentExample":{"description":"Use any of the available button style types to quickly create a styled button. Just modify the `bsStyle` prop.\n\n(This description is defined above the class definition in code.)","displayName":"DocCommentExample","props":{"block":{"type":{"name":"bool"},"required":false,"description":"Block level"},"bsStyle":{"type":{"name":"enum","value":[{"value":"'default'","computed":false},{"value":"'primary'","computed":false},{"value":"'success'","computed":false},{"value":"'info'","computed":false}]},"required":false,"description":"Style types ('default', 'primary', 'success', 'info')"}}}}
+          propMetas: {"DocCommentExample":{"description":"Use any of the available button style types to quickly create a styled button. Just modify the `bsStyle` prop.\n\n(This description is defined above the class definition in code.)","displayName":"DocCommentExample","props":{"block":{"type":{"name":"bool"},"required":true,"description":"Block level"},"bsStyle":{"type":{"name":"enum","value":[{"value":"'default'","computed":false},{"value":"'primary'","computed":false},{"value":"'success'","computed":false},{"value":"'info'","computed":false}]},"required":false,"description":"Style types `'default|primary|success|info'`","defaultValue":{"value":"'default'","computed":false}}}}}
       }
 
     </script>
